consumido desde del front

--- a/frondendcajero/src/app/components/home/home.component.html
+++ b/frondendcajero/src/app/components/home/home.component.html
@@ -1,12 +1,14 @@
 <table class="table table-dark table-hover center"  style="height: 100px;">
     <thead>
+        <button  class="btn btn-danger" (click)= 'closesecion()'> cerrar sesion</button>
+   
       <tr>
             
         
         <th scope="col">NOMBRE</th>
-        <th scope="col">PRECIO </th>
-        <th scope="col"> UNIDADES</th>
-        <th>TOTAL PRECIO</th>
+        <th scope="col">DOCUMENTO </th>
+        <th scope="col"> CORREO</th>
+        <th>SALDO ACTUAL</th>
         <th scope="col"> ACCION</th>
     
   
@@ -21,20 +23,20 @@
        <td scope="col">{{user.nombres}}</td>
         <td scope="row">{{user.documento}}</td>
         <td scope="row">{{user.correo}}</td>
-        <td scope="row">{{user.saldo}}</td>
+        <td scope="row">{{user.saldo}}$</td>
       
     
         
         <td>
           <div class="options">
-            <button class="btn btn-light" routerLink="/add">NUEVO</button>
+            <i class="btn btn-light" [routerLink]="['/movmientos/',(user.documento)]">NUEVO</i>
     
             <br>
             <br>
              <i [routerLink]="['/movmientos/',(user.documento)]" class="btn btn-primary">HISTORIAL MOVIMIENTOS</i>
             <br>
             <br>
-            <!-- <i  (click)="deleteProduct(product.codigoProuducto)" class="btn btn-danger">ELIMINAR</i> -->
+             <i  [routerLink]="['/movmientos/',(user.documento)]" class="btn btn-danger">RETIRAR DINERO</i>
           </div>
          
         </td>
