cambios vista login

--- a/frondendcajero/src/app/components/login/login.component.css
+++ b/frondendcajero/src/app/components/login/login.component.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+*{
+  margin: 0;
+}
 
 body {
-   background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%); 
+  width: 100vw;
+  height: 100vh;
+  background: rgb(2,0,36);
+  background: linear-gradient(158deg, rgba(2,0,36,1) 25%, rgba(20,136,198,1) 50%, rgba(0,212,255,1) 75%);
 }
 
 .login {
@@ -14,7 +20,7 @@ body {
 .form {
   position: relative;
   z-index: 1;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 10px;
   max-width: 360px;
   margin: 0 auto 100px;
@@ -22,6 +28,9 @@ body {
   text-align: center;
 }
 
+.material-icons{
+  color: #000;
+}
 .form input {
   outline: 0;
   background: #f2f2f2;
