--- a/frondendcajero/src/app/components/home/home.component.html
+++ b/frondendcajero/src/app/components/home/home.component.html
@@ -1,42 +1,31 @@
 <table class="table table-dark table-hover center"  style="height: 100px;">
     <thead>
         <button  class="btn btn-danger" (click)= 'closesecion()'> cerrar sesion</button>
-   
-      <tr>
-            
-        
+      <tr> 
         <th scope="col">NOMBRE</th>
         <th scope="col">DOCUMENTO </th>
         <th scope="col"> CORREO</th>
         <th>SALDO ACTUAL</th>
         <th scope="col"> ACCION</th>
-    
-  
-       
-    
-        
-
-
     </thead>
     <tbody >
       <tr *ngFor="let user of listUser">
        <td scope="col">{{user.nombres}}</td>
         <td scope="row">{{user.documento}}</td>
         <td scope="row">{{user.correo}}</td>
-        <td scope="row">{{user.saldo}}$</td>
-      
-    
-        
+        <td scope="row">{{user.saldo}}$</td>    
         <td>
           <div class="options">
             <i class="btn btn-light" [routerLink]="['/movmientos/',(user.documento)]">NUEVO</i>
-    
             <br>
             <br>
-             <i [routerLink]="['/movmientos/',(user.documento)]" class="btn btn-primary">HISTORIAL MOVIMIENTOS</i>
+             <i [routerLink]="['/movmientos/',(user.documento)]" class="btn btn-light">HISTORIAL MOVIMIENTOS</i>
             <br>
             <br>
-             <i  [routerLink]="['/movmientos/',(user.documento)]" class="btn btn-danger">RETIRAR DINERO</i>
+             <i  [routerLink]="['/movmientos/',(user.documento)]" class="btn btn-light">RETIRAR</i>
+             <br>
+             <br>
+             <i  [routerLink]="['/movmientos/',(user.documento)]" class="btn btn-light">CONSIGNAR</i>
           </div>
          
         </td>
