--- a/frondendcajero/src/app/components/movimientos/movimientos.component.html
+++ b/frondendcajero/src/app/components/movimientos/movimientos.component.html
@@ -1,4 +1,17 @@
 
+  <div >
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="navbar-brand">CAJERO AUTMÁTICO POLI </a>
+  
+  
+    <button  class="btn btn-danger" (click)= 'closesecion()'> cerrar sesion</button>
+  </nav>
+  </div>
+  <br>
+  <div class="container">
+    <h1>HISTORIAL DE RETIROS </h1>
+  </div>
+  <div class="container">
   <table class="table table-dark table-hover center"  style="height: 100px;">
     <thead>
       <tr>
@@ -23,3 +36,5 @@
       
 
   </table>
+
+</div>
