--- a/frondendcajero/src/app/components/retiro/retiro.component.html
+++ b/frondendcajero/src/app/components/retiro/retiro.component.html
@@ -6,6 +6,7 @@
                 <input type="number" formControlName = "valorRetiro">
                 <button class="btn btn-dark btn-sm"> Enviar</button>
             </form>
+            <i routerLink="/home" class="btn btn-light">VOLVER</i>
         </div>
       </div>
     </div>
