--- a/frondendcajero/src/app/components/consignar/consignar.component.html
+++ b/frondendcajero/src/app/components/consignar/consignar.component.html
@@ -1,11 +1,18 @@
-<div class="container">
-<div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-        <form [formGroup]="movForm"   (submit)="consignarDinero()">
-            <input type="number" formControlName = "valorRetiro">
-            <button class="btn btn-dark btn-sm"> Enviar</button>
-        </form>
+<body>
+    <div class="inicio">
+        <i routerLink="/home" class="btn btn-dark">VOLVER</i>
+        <h1 class="titulo">CONSIGNAR</h1>
     </div>
-  </div>
-</div>
+    <div class="container">
+        <div class="card" style="width: 18rem;">
+            <!-- <img src="..." class="card-img-top" alt="..."> -->
+            <div class="card-body">
+                <h6>Ingrese el monto a consignar</h6>
+                <form [formGroup]="movForm" (submit)="consignarDinero()">
+                    <input type="number" formControlName="valorRetiro">
+                    <button class="btn btn-dark btn-sm"> Enviar</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
