--- a/frondendcajero/src/app/components/movimientos/movimientos.component.html
+++ b/frondendcajero/src/app/components/movimientos/movimientos.component.html
@@ -2,7 +2,7 @@
 
   <div >
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" routerLink="/home">REGRESAR </a>
+      <a class="navbar-brand" (click)="volver()">REGRESAR </a>
       
       
       <button  class="btn btn-danger" (click)= 'closesecion()'> cerrar sesion</button>
